<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8EBAD"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="233dp"
        android:layout_height="28dp"
        android:layout_marginBottom="20dp"
        android:background="#F8FAC2"
        android:text="@string/textview1"
        android:textSize="25sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.935" />

    <EditText
        android:id="@+id/editTextTextPassword3"
        android:layout_width="0dp"
        android:layout_height="28dp"

        android:layout_marginStart="9dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="9dp"
        android:autofillHints="no"
        android:background="#F8FAC2"
        android:ems="10"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="LabelFor"
        tools:text="password" />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="0dp"
        android:layout_height="27dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="9dp"
        android:background="#F8FAC2"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editTextPhone2"
        android:layout_width="0dp"
        android:layout_height="39dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="9dp"
        android:background="#F8FAC2"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="LabelFor" />

    <CalendarView
        android:id="@+id/calendarView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:background="#F8FAC2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleButton" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="135dp"
        android:layout_height="55dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="38dp"
        android:layout_marginBottom="39dp"
        android:background="#F8FAC2"
        android:text="@string/switch1"
        app:layout_constraintBottom_toTopOf="@+id/calendarView2"
        app:layout_constraintEnd_toStartOf="@+id/toggleButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone2"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="120dp"
        android:layout_height="54dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="51dp"
        android:background="#F8FAC2"
        android:text="@string/checkbox1"
        app:layout_constraintBottom_toTopOf="@+id/calendarView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/toggleButton"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone2" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="134dp"
        android:layout_height="57dp"

        android:layout_marginTop="36dp"
        android:layout_marginBottom="39dp"
        app:layout_constraintBottom_toTopOf="@+id/calendarView2"
        app:layout_constraintEnd_toStartOf="@+id/checkBox"
        app:layout_constraintStart_toEndOf="@+id/switch2"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="57dp"
        android:layout_marginBottom="181dp"
        android:text="@string/password1"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/toggleButton"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/numberPhone"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress2"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/address"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword3"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>